# intelligent_autonomous_negotiation_agent

./: .gitignore  Final Project - Negotiation Agent Report - Group14.docx  README.md  ReadMe.md  group14.py  negmas_demonstration.py  pyproject.toml
config/: group14.json  utils.py
data/: Project_Setup_Steps.docx
data/models/: group14_nn_model.pth  group14_nn_scaler.pkl
data/training_data/: all_scores_v1.csv  all_scores_v2.csv  all_scores_v3.csv  all_scores_v4.csv  all_scores_v5.csv
eval_data/: all_scores.csv  plot_results.py
group14/: beat_conceder.py  group14.py  v1_mdp.py  v2_mdp+ml.py
group14/helpers/: neural_networks.py  random_forest_regressor.py  runner.py  somehelperclass.py
helpers/: neural_networks_model.py  random_forest_model.py  runner.py
myagent/: myagent.py
