[tool.poetry]
name = "group14"
version = "0.1.0"
description = "Intelligent Autonomous Negotiation Agent"
authors = ["nivb"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
negmas = "^0.10.23"
anl = "^0.1.10"
numpy = "^2.2.2"
pandas = "^2.2.3"
matplotlib = "^3.10.0"
networkx = "^3.4.2"
xgboost = "^2.1.4"
torch = "^2.6.0"


[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
flake8 = "^7.1.1"
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
